Added onjoin module for moving players on join as the first mumo plugin. Numerous fixes/changes in the underlying stuff. Moved sample configuration files from modules-enabled to modules-available.

--- a/mumo.ini
+++ b/mumo.ini
@@ -7,39 +7,39 @@
 ; Host and port of the Ice interface on
 ; the target Murmur server.
 
-;host            = 127.0.0.1
-;port            = 6502
+host = 127.0.0.1
+port = 6502
 
-; If you do not define a slicefile here MuMo
-; will try to automatically retrieve it from
-; the server. This forces need_on_startup to
-; True
+; Slicefile to use 
 
-;slice           =
+slice = Murmur.ice
 
 ; Shared secret between the MuMo and the Murmur
 ; server. For security reason you should always
 ; use a shared secret.
 
-;secret          =
+secret =
 
 ;Check Ice connection every x seconds
 
-;watchdog        = 15
+watchdog = 15
 
 [modules]
-;mod_dir = modules/
-;cfg_dir = modules-enabled/
-;timeout = 2
+mod_dir = modules/
+cfg_dir = modules-enabled/
+timeout = 2
 
 [system]
-
-;pidfile     = muauth.pid
+pidfile = muauth.pid
 
 
 ; Logging configuration
 [log]
 ; Available loglevels: 10 = DEBUG (default) | 20 = INFO | 30 = WARNING | 40 = ERROR
 
-;level   = 10
-;file    = mumo.log
+level =
+file = mumo.log
+
+
+[iceraw]
+Ice.ThreadPool.Server.Size = 5
