Add missing section to mumo.ini and set a default for the Treename in mbf2man.py

--- a/mumo.ini
+++ b/mumo.ini
@@ -24,6 +24,12 @@ secret =
 
 watchdog = 15
 
+[murmur]
+; Comma seperated list of server ids to listen on (empty for all)
+; note that if a server isn't listed here no events for it can
+; be received in any module
+servers = 
+
 [modules]
 mod_dir = modules/
 cfg_dir = modules-enabled/
