Modify idlemove module to be able to chain thresholds for moving and add source channel filters

--- a/modules-available/idlemove.ini
+++ b/modules-available/idlemove.ini
@@ -13,6 +13,9 @@ interval = 10
 servers =
 
 [all]
+; All parameters in here also take a comma seperated list of values.
+; You can use this to chain idle thresholds.
+
 ; Time in seconds after which to consider a player idle
 threshold = 3600
 ; Mute the player idle
@@ -21,6 +24,8 @@ mute = True
 deafen = False
 ; Id of the channel to move the player to when idle
 channel = 0
+; Channel the player has to be in for this treshold rule to affect him (-1 == Any)
+;source_channel = -1
 
 ; For every server you want to override the [all] section for create
 ; a [server_<serverid>] section. For example:
