Extend documentation in default bf2.ini

--- a/modules-available/bf2.ini
+++ b/modules-available/bf2.ini
@@ -5,15 +5,45 @@
 ;
 
 [bf2]
+; Overall count of game sections in this configuration
 gamecount = 1
 
+; Game sections must be named g0, g1, g2 and so on. They
+; describe independently running bf2 games with their
+; own channel structures. Make sure that the number of
+; game sections present in your configuration matches the
+; gamecount set in the bf2 section. Make sure the numbering
+; is continuous
 [g0]
+; Gamename to use for groupnames/logs
+; if left empty the section tag (p.e. g0)
+; will be used
 name = 
+
+; Virtual mumble server this game will
+; run on
 mumble_server = 1
+
+; Regular expression to filter for a certain ipport combination reported
+; by the plugins. If you have more then one server per virtual server
+; you _must_ seperate the games by setting this
 ipport_filter = .*
 
+; Channel the player is moved to (-1 for don't move)
 left = -1
 
+; Channels in which the player is moved to
+; if the in-game state matches. -1 for do
+; not move.
+
+; NOTE: blufor and opfor variables _most_ _not_
+; be -1. These channels will be used to store most of
+; the groups managed by the plugin. To understand
+; the inner working better look at the channel/ACL
+; structures created by mbf2man.py from the tools/
+; directory
+
+blufor = -1
 blufor_commander = -1
 blufor_no_squad = -1
 blufor_alpha_squad = -1
@@ -34,7 +64,8 @@ blufor_hotel_squad = -1
 blufor_hotel_squad_leader = -1
 blufor_india_squad = -1
 blufor_india_squad_leader = -1
-                             
+
+opfor = -1
 opfor_commander = -1
 opfor_no_squad = -1
 opfor_alpha_squad = -1
