Add easy way of negating ipport_filter regex to bf2 module

--- a/modules-available/bf2.ini
+++ b/modules-available/bf2.ini
@@ -28,6 +28,8 @@ mumble_server = 1
 ; by the plugins. If you have more then one server per virtual server
 ; you _must_ seperate the games by setting this
 ipport_filter = .*
+; Negates ipport_filter if True
+ipport_filter_negate = False
 
 ; Channel the player is moved to (-1 for don't move)
 left = -1
