Enable mumo to retrieve slice file from server on startup and make that the default behavior

--- a/mumo.ini
+++ b/mumo.ini
@@ -10,9 +10,11 @@
 host = 127.0.0.1
 port = 6502
 
-; Slicefile to use 
+; Slicefile to use (e.g. /etc/slice/Murmur.ice), 
+; if empty MuMo will load the slice file from the
+; target server at startup.
 
-slice = Murmur.ice
+slice = 
 
 ; Shared secret between the MuMo and the Murmur
 ; server. For security reason you should always
