Add capability to delete unused channels to source plugin

--- a/modules-available/source.ini
+++ b/modules-available/source.ini
@@ -49,7 +49,7 @@ restrict = true
 ; Create base/server-channels on-demand
 createifmissing = true
 ; Delete channels as soon as the last player is gone
-deleteifunused = false
+deleteifunused = true 
 
 ; Regular expression for server restriction.
 ; Will be checked against steam server id.
