Source plugin ini diverged from py defaults.

--- a/modules-available/source.ini
+++ b/modules-available/source.ini
@@ -46,9 +46,7 @@ teams = Lobby, Spectator, Team one, Team two, Team three, Team four
 ; When creating a channel setup ACLs to restrict it to players
 restrict = true
 
-; Create base/server-channels on-demand
-createifmissing = true
-; Delete channels as soon as the last player is gone
+; Delete server channels as soon as the last player is gone
 deleteifunused = true 
 
 ; Regular expression for server restriction.
