Improve mumo behavior with platforms in which Ice.getSliceDir behaves unexpected

--- a/mumo.ini
+++ b/mumo.ini
@@ -16,6 +16,11 @@ port = 6502
 
 slice = 
 
+; Semicolon seperated list of slice include directories
+; to consider. This is only used on legacy platforms
+; with old or broken Ice versions.
+slicedirs = /usr/share/slice;/usr/share/Ice/slice
+
 ; Shared secret between the MuMo and the Murmur
 ; server. For security reason you should always
 ; use a shared secret.
