Correct long game names in source plugin

--- a/modules-available/source.ini
+++ b/modules-available/source.ini
@@ -61,15 +61,15 @@ name = Team Fortress 2
 teams = Lobby, Spectator, Blue, Red
 
 [game:dod]
-name = Day of Defeat : Source
+name = Day of Defeat: Source
 teams = Lobby, Spectator, U.S. Army, Wehrmacht
 
 [game:cstrike]
-name = Counterstrike Source
+name = Counter-Strike: Source
 teams = Lobby, Spectator, Terrorist, CT Forces
 
 [game:hl2mp]
-name = HL2: Death Match
+name = Half-Life 2: Deathmatch
 teams = Lobby, Spectator, Combine, Rebels
 
 
