Added support for a user whitelist in idlemove

--- a/modules-available/idlemove.ini
+++ b/modules-available/idlemove.ini
@@ -26,7 +26,8 @@ deafen = False
 channel = 0
 ; Channel the player has to be in for this treshold rule to affect him (-1 == Any)
 ;source_channel = -1
-
+; Comma seperated list of player names that will not be moved when idle (such as bots)
+whitelist =
 ; For every server you want to override the [all] section for create
 ; a [server_<serverid>] section. For example:
 
@@ -36,3 +37,4 @@ channel = 0
 ;mute = True
 ;deafen = False
 ;channel = 1
+
