Add channel whitelist for excluding channels from idle handling
This adds a new channel_whitelist variable that can be used
to specify channels that players won't be moved from even if
they are idle.

Fixes: #8

--- a/modules-available/idlemove.ini
+++ b/modules-available/idlemove.ini
@@ -28,9 +28,11 @@ channel = 0
 ;source_channel = -1
 ; Comma seperated list of player names that will not be moved when idle (such as bots)
 whitelist =
+; Comma seperated list of channel ids from which players will not be moved even when idle.
+; channel_whitelist =
+
 ; For every server you want to override the [all] section for create
 ; a [server_<serverid>] section. For example:
-
 ; Overriding [all] for server with the id 1 would look like this
 ;[server_1]
 ;threshold = 60
