Add gRPC support including bridge for existing modules

--- a/mumo.ini
+++ b/mumo.ini
@@ -31,6 +31,21 @@ secret =
 
 watchdog = 15
 
+;
+;gRPC configuration
+;
+[grpc]
+
+; Whether to use gRPC instead of Ice
+
+active = false
+
+; Host and port of the gRPC interface on
+; the target Murmur server.
+
+host = 10.137.7.1
+port = 50051
+
 [murmur]
 ; Comma seperated list of server ids to listen on (empty for all)
 ; note that if a server isn't listed here no events for it can
