misc(ci): Build with GitHub Action like the publish workflow

--- a/.github/workflows/docker-image_build.yml
+++ b/.github/workflows/docker-image_build.yml
@@ -8,5 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build -t mumo .
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        tags: mumblevoip/mumo
