misc(ci): Build Docker with cache

--- a/.github/workflows/docker-image_build.yml
+++ b/.github/workflows/docker-image_build.yml
@@ -14,3 +14,5 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         tags: mumblevoip/mumo
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
