--- a/.github/workflows/docker-image_build.yml
+++ b/.github/workflows/docker-image_build.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
