--- a/.github/workflows/docker-image_publish.yml
+++ b/.github/workflows/docker-image_publish.yml
@@ -8,6 +8,8 @@ jobs:
     environment: DockerHub
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -18,3 +20,5 @@ jobs:
       with:
         push: true
         tags: mumblevoip/mumo
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
