--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -18,8 +18,8 @@ jobs:
         pip install flake8 pylint pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Analysing the code with pylint
-      run: |
-        pylint --errors-only $(git ls-files '*.py')
+      run: pylint --errors-only $(git ls-files '*.py')
+      continue-on-error: true
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
