--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -17,7 +17,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pylint pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Analysing the code with pylint
+    - name: Lint with pylint
       run: pylint --errors-only $(git ls-files '*.py')
       continue-on-error: true
     - name: Lint with flake8
